fix(Country Risk): upgrade version to new release